--- a/personal.css
+++ b/personal.css
@@ -17,7 +17,7 @@ main{
     position: fixed;
     text-align: center;
 }   
-.head >img{
+.image{
   width: auto;
   height: 20%;
   border-radius: 500px;
